--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -221,7 +221,7 @@ img.large {
 
 .alert-info {
     color: #2020a0;
-    background-color: e0e0ff;
+    background-color: #e0e0ff;
 }
 
 .alert-danger {
