--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -88,7 +88,7 @@ button {
     border-radius: 0.5rem;
     border: 0.1rem #a4a4a4 solid;
     font-size: 1.6rem;
-    font-family: "Amazon Ember", Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
